# TRX

./: CMakeLists.txt  README.md
data/: txdata1 copy.pcm
data/new/: txdata.pcm  txdata2.pcm
examples/: test_config.yml
python_examples/generate/: main.py  main2.py  main3.py  qpsk_signal.txt  sync_word.txt
python_examples/ofdm/: main.py  tests.py
python_examples/receive/: main.py  main_pol.py
src/: main.cpp
src/SDR/: SDRConfig.cpp  SDRDriver.cpp
src/SDR/modules/SoapySDR/: SoapySDRDriver.cpp
src/SDR/modules/include/: SoapySDRDriver.hpp
src/ThreadManager/: README.md  ThreadManager.cpp
src/config/: Config.cpp  SDRConfigManager.cpp  SystemConfig.cpp
src/include/: Common.hpp  Config.hpp  RingBuffer.hpp  SDRConfig.hpp  SDRConfigManager.hpp  SDRDriver.hpp  SystemConfig.hpp  ThreadManager.hpp
